--- a/index.html
+++ b/index.html
@@ -111,26 +111,88 @@
   <main>
 
     <!-- hero section start -->
-     <section class="bg-[#f7f7f7]">
+    <section class="bg-[#f7f7f7]">
       <div class="hero  min-h-screen">
         <div class="hero-content text-center">
           <div class="">
             <img class="lg:max-w-2xl mx-auto" src="./assets/banner.png" alt="">
-            <h1 class="text-[24px] lg:text-[64px] font-black">A barn house of this design has a <br> striking appearance</h1>
+            <h1 class="text-[24px] lg:text-[64px] font-black">A barn house of this design has a <br> striking appearance
+            </h1>
             <p class="py-6">
-              The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal <br>accents, and large windows that flood the space with natural light.
+              The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
+              wood, sleek metal <br>accents, and large windows that flood the space with natural light.
             </p>
             <button class="btn border-[#ABEF5F] rounded-full py-2 px-5 bg-[#ABEF5F80] font-black">View Details
               <i class="size-6 bg-[#abef5f] text-black rounded-full w-8 h-8"><svg xmlns="http://www.w3.org/2000/svg"
-                fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 m-[4px]">
-                <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-              </svg></i>
+                  fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 m-[4px]">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                </svg></i>
             </button>
           </div>
         </div>
       </div>
-     </section>
+    </section>
     <!-- hero section end -->
+
+
+    <!-- about us start -->
+    <section class="bg-[#e8e8e8]">
+
+        <div class="hidden lg:block">
+          <img class="relative left-40 top-28" src="./assets/Vector.png" alt="">
+        </div>
+
+      <div class="lg:flex justify-evenly items-center py-20">
+        <!-- about content -->
+        <div class="text-center lg:text-left">
+
+          <div class="flex gap-3 items-center w-44 px-7 py-2  border rounded-full bg-white m-auto lg:m-0 mb-4">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+            </svg>
+            <h4 class="text-black font-black">About Us</h4>
+          </div>
+
+          <h1 class="text-[24px] lg:text-[42px] font-extrabold leading-normal">We design thoughtful, <br>  liveable spaces </h1>
+          <p class="text-[10px]  lg:text-[16px] font-medium mt-5">The barn house captivates with its blend of rustic charm and <br>  modern
+            sophistication, featuring
+            weathered
+            wood, sleek metal accents.</p>
+
+          <!-- about carts -->
+          <div class="space-y-6 mt-10 mx-4 lg:mx-0 text-left">
+            <!-- cart 1 -->
+            <div class="flex items-center gap-5 border bg-white rounded-2xl p-5">
+              <img src="./assets/commercial.png" alt="">
+              <div>
+                <h3 class="font-black">Commercial </h3>
+                <p>The barn house captivates with its blend
+                  of rustic charm and modern.</p>
+              </div>
+            </div>
+
+            <!-- cart 2 -->
+            <div class="flex items-center gap-5 border bg-white rounded-2xl p-5">
+              <img src="./assets/residential.png" alt="">
+              <div>
+                <h3 class="font-black">Residential </h3>
+                <p>The barn house captivates with its blend 
+                  of rustic charm and modern.</p>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
+        <!-- about images -->
+        <div class=" p-5">
+          <img src="./assets/Rectangle.png" alt="">
+        </div>
+      </div>
+    </section>
+    <!-- about us end -->
 
 
   </main>
