--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
   <style>
     .manrope_font {
       font-family: "Manrope", sans-serif;
-
     }
   </style>
+
+
 </head>
 
 <body class="manrope_font">
@@ -112,7 +113,7 @@
 
     <!-- hero section start -->
     <section class="bg-[#f7f7f7]">
-      <div class="hero  min-h-screen">
+      <div class="hero ">
         <div class="hero-content text-center">
           <div class="">
             <img class="lg:max-w-2xl mx-auto" src="./assets/banner.png" alt="">
@@ -138,9 +139,9 @@
     <!-- about us start -->
     <section class="bg-[#e8e8e8]">
 
-        <div class="hidden lg:block">
-          <img class="relative left-40 top-28" src="./assets/Vector.png" alt="">
-        </div>
+      <div class="hidden lg:block">
+        <img class="relative left-40 top-28" src="./assets/Vector.png" alt="">
+      </div>
 
       <div class="lg:flex justify-evenly items-center py-20">
         <!-- about content -->
@@ -154,8 +155,10 @@
             <h4 class="text-black font-black">About Us</h4>
           </div>
 
-          <h1 class="text-[24px] lg:text-[42px] font-extrabold leading-normal">We design thoughtful, <br>  liveable spaces </h1>
-          <p class="text-[10px]  lg:text-[16px] font-medium mt-5">The barn house captivates with its blend of rustic charm and <br>  modern
+          <h1 class="text-[24px] lg:text-[42px] font-extrabold leading-normal">We design thoughtful, <br> liveable
+            spaces </h1>
+          <p class="text-[10px]  lg:text-[16px] font-medium mt-5">The barn house captivates with its blend of rustic
+            charm and <br> modern
             sophistication, featuring
             weathered
             wood, sleek metal accents.</p>
@@ -177,7 +180,7 @@
               <img src="./assets/residential.png" alt="">
               <div>
                 <h3 class="font-black">Residential </h3>
-                <p>The barn house captivates with its blend 
+                <p>The barn house captivates with its blend
                   of rustic charm and modern.</p>
               </div>
             </div>
@@ -193,6 +196,58 @@
       </div>
     </section>
     <!-- about us end -->
+
+
+    <!-- clients & woker start -->
+    <section class="bg-[#e8e8e8] pb-20 px-10 lg:px-0">
+      <div class="bg-white lg:w-[1400px] space-y-10 lg:space-y-0 mx-auto  p-10 border rounded-xl lg:flex  justify-between">
+        <!-- part 1 -->
+        <div class="flex flex-col items-center space-y-2">
+
+          <span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-8">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
+            </svg></span>
+          <h1 class="font-black text-3xl">235+</h1>
+          <p>Happy Clients Review</p>
+        </div>
+
+        <!-- part 2 -->
+        <div class="flex flex-col items-center space-y-2">
+
+          <span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
+          </svg>
+          </span>
+          <h1 class="font-black text-3xl">035+</h1>
+          <p>Work Departments</p>
+        </div>
+
+        <!-- part 3 -->
+        <div class="flex flex-col items-center space-y-2">
+
+          <span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+          </svg>
+          </span>
+          <h1 class="font-black text-3xl">150k+</h1>
+          <p>Our Happy Client</p>
+        </div>
+
+        <!-- part 4 -->
+        <div class="flex flex-col items-center space-y-2">
+
+          <span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z" />
+          </svg>
+          </span>
+          <h1 class="font-black text-3xl">300+</h1>
+          <p>Staff Members</p>
+        </div>
+      </div>
+    </section>
+    <!-- clients & woker end -->
 
 
   </main>
