--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <main>
 
     <!-- hero section start -->
-    <section class="bg-[#f7f7f7]">
+    <section class="bg-[#f7f7f7] py-14">
       <div class="hero ">
         <div class="hero-content text-center">
           <div class="">
@@ -248,6 +248,58 @@
       </div>
     </section>
     <!-- clients & woker end -->
+
+
+    <!-- work process start -->
+     <section class="bg-[#e8e8e8]  p-10">
+        <div class="text-center space-y-5">
+
+          <div class="flex gap-3 items-center w-52 px-7 py-2  border rounded-full bg-white m-auto  mb-4">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+            </svg>
+            <h4 class="text-[#494949] font-black">How we works</h4>
+          </div>
+
+          <h1 class="text-4xl font-black " >Our Works Process</h1>
+          <p>The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+
+          <!-- services cards -->
+           <div class="lg:flex gap-10  max-w-[1400px] mx-auto py-14 space-y-5 lg:space-y-0">
+                <!-- card 1 -->
+                 <div class="flex flex-col items-start m-auto text-left  bg-[#E7C1D3] p-7 rounded-lg space-y-2">
+                  <img src="./assets/concept.png" alt="">
+                  <h2 class="font-black text-xl">Concept</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+
+                 <!-- card 2 -->
+                 <div class="flex flex-col items-start m-auto text-left  bg-[#EFDA6E] p-7 rounded-lg space-y-2">
+                  <img src="./assets/flow-chart.png" alt="">
+                  <h2 class="font-black text-xl">Design Process</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+
+
+                 <!-- card 3 -->
+                 <div class="flex flex-col items-start m-auto text-left  bg-[#A4DAC3] p-7 rounded-lg space-y-2">
+                  <img src="./assets/vision.png" alt="">
+                  <h2 class="font-black text-xl">Supervision</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+
+
+                 <!-- card 4 -->
+                 <div class="flex flex-col items-start m-auto text-left  bg-[#77AAEA] p-7 rounded-lg space-y-2">
+                  <img src="./assets/budget-planning.png" alt="">
+                  <h2 class="font-black text-xl">Budget Planning</h2>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+           </div>
+        </div>
+     </section>
+    <!-- work process end -->
 
 
   </main>
