--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <section class="bg-[#e8e8e8]  p-10">
       <div class="text-center space-y-5">
 
-        <div class="flex gap-3 items-center w-52 px-7 py-2  border rounded-full bg-white m-auto  mb-4">
+        <div class="flex gap-3 items-center w-[15rem] px-7 py-2  border rounded-full bg-white m-auto  mb-4">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
@@ -280,7 +280,7 @@
           <h4 class="text-[#494949] font-black">How we works</h4>
         </div>
 
-        <h1 class="text-4xl font-black ">Our Works Process</h1>
+        <h1 class="text-3xl lg:text-4xl font-black ">Our Works Process</h1>
         <p>The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered
           wood, sleek metal accents.</p>
 
@@ -325,7 +325,7 @@
     <section class="py-24">
       <div class="text-center space-y-5">
 
-        <div class="flex gap-3 items-center w-72 px-7 py-2  border rounded-full bg-[#ABEF5F33] m-auto  mb-4">
+        <div class="flex gap-3 items-center w-[20rem] px-7 py-2  border rounded-full bg-[#ABEF5F33] m-auto  mb-4">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
@@ -404,6 +404,165 @@
       </div>
     </section>
     <!-- our latest portfolio end  -->
+
+
+    <!-- Articles and News start -->
+    <section class="bg-[#e8e8e8] p-5 ">
+      <div class="text-center">
+        <div class="flex gap-3 items-center w-56 px-7 py-2  border rounded-full bg-[#ABEF5F33] m-auto  mb-4">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+          </svg>
+          <h4 class="text-[#494949] font-black">Rinterio News</h4>
+        </div>
+
+        <h1 class="text-[1.75rem] lg:text-4xl font-black ">Read Our Article and News</h1>
+        <p class="my-5">The barn house captivates with its blend of rustic charm and modern sophistication, <br>
+          featuring weathered
+          wood, sleek metal accents.</p>
+
+
+        <!-- artical cards -->
+        <div class="lg:flex justify-evenly  lg:max-w-[1400px] mx-auto  my-14 space-y-7">
+
+          <!-- card 1 -->
+          <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
+            <figure>
+              <img src="assets/article1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+
+              <div class="flex gap-5 text-[12px] text-[#737373]">
+                <span class="flex items-center gap-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
+                  </svg>
+                  <p>August 24, 2024</p>
+                </span>
+
+                <span class="flex items-center gap-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                  </svg>
+                  <p>By Admin</p>
+                </span>
+              </div>
+              <h2 class="card-title font-black text-[22px]">How to choose the furniture right of your home.</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern.</p>
+
+              <!-- read more button -->
+              <div class="card-actions justify-start mt-3">
+                <div class="flex items-center gap-4">
+                  <button class=" font-black">Read More</button>
+                  <i class="size-6 bg-[#abef5f] text-black rounded-full w-7 h-7"><svg xmlns="http://www.w3.org/2000/svg"
+                      fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 m-[4px]">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                    </svg></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+           <!-- card 2 -->
+           <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
+            <figure>
+              <img src="assets/article2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+
+              <div class="flex gap-5 text-[12px] text-[#737373]">
+                <span class="flex items-center gap-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
+                  </svg>
+                  <p>August 24, 2024</p>
+                </span>
+
+                <span class="flex items-center gap-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                  </svg>
+                  <p>By Admin</p>
+                </span>
+              </div>
+              <h2 class="card-title font-black text-[22px]">How to choose the furniture right of your home.</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern.</p>
+
+              <!-- read more button -->
+              <div class="card-actions justify-start mt-3">
+                <div class="flex items-center gap-4">
+                  <button class=" font-black">Read More</button>
+                  <i class="size-6 bg-[#abef5f] text-black rounded-full w-7 h-7"><svg xmlns="http://www.w3.org/2000/svg"
+                      fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 m-[4px]">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                    </svg></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+           <!-- card 3 -->
+           <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
+            <figure>
+              <img src="assets/article3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+
+              <div class="flex gap-5 text-[12px] text-[#737373]">
+                <span class="flex items-center gap-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5m-9-6h.008v.008H12v-.008ZM12 15h.008v.008H12V15Zm0 2.25h.008v.008H12v-.008ZM9.75 15h.008v.008H9.75V15Zm0 2.25h.008v.008H9.75v-.008ZM7.5 15h.008v.008H7.5V15Zm0 2.25h.008v.008H7.5v-.008Zm6.75-4.5h.008v.008h-.008v-.008Zm0 2.25h.008v.008h-.008V15Zm0 2.25h.008v.008h-.008v-.008Zm2.25-4.5h.008v.008H16.5v-.008Zm0 2.25h.008v.008H16.5V15Z" />
+                  </svg>
+                  <p>August 24, 2024</p>
+                </span>
+
+                <span class="flex items-center gap-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                  </svg>
+                  <p>By Admin</p>
+                </span>
+              </div>
+              <h2 class="card-title font-black text-[22px]">How to choose the furniture right of your home.</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern.</p>
+
+              <!-- read more button -->
+              <div class="card-actions justify-start mt-3">
+                <div class="flex items-center gap-4">
+                  <button class=" font-black">Read More</button>
+                  <i class="size-6 bg-[#abef5f] text-black rounded-full w-7 h-7"><svg xmlns="http://www.w3.org/2000/svg"
+                      fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 m-[4px]">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                    </svg></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
+
+
+
+      </div>
+    </section>
+    <!-- Articles and News end -->
 
 
   </main>
