--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
 
     <!-- Articles and News start -->
-    <section class="bg-[#e8e8e8] p-5 ">
+    <section class="bg-[#e8e8e8] p-5 lg:pt-12">
       <div class="text-center">
         <div class="flex gap-3 items-center w-56 px-7 py-2  border rounded-full bg-[#ABEF5F33] m-auto  mb-4">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -424,7 +424,7 @@
 
 
         <!-- artical cards -->
-        <div class="lg:flex justify-evenly  lg:max-w-[1400px] mx-auto  my-14 space-y-7">
+        <div class="lg:flex justify-evenly  lg:max-w-[1400px] mx-auto  my-14 space-y-7 lg:space-y-0">
 
           <!-- card 1 -->
           <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
@@ -469,8 +469,8 @@
           </div>
 
 
-           <!-- card 2 -->
-           <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
+          <!-- card 2 -->
+          <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
             <figure>
               <img src="assets/article2.png" alt="Shoes" />
             </figure>
@@ -512,8 +512,8 @@
           </div>
 
 
-           <!-- card 3 -->
-           <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
+          <!-- card 3 -->
+          <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
             <figure>
               <img src="assets/article3.png" alt="Shoes" />
             </figure>
@@ -563,6 +563,47 @@
       </div>
     </section>
     <!-- Articles and News end -->
+
+
+    <!-- Form Discuss Next Project start  -->
+    <section style="background-image: url(./assets/bg.jpg); background-size: cover;">
+      <div class="text-center py-10 max-w-[1200px] mx-auto p-5">
+
+        <div class="flex gap-3 items-center w-56 px-7 py-2  border rounded-full bg-[#ABEF5F33] m-auto  mb-4">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+          </svg>
+          <h4 class="text-[#494949] font-black">Let's Contact</h4>
+        </div>
+
+        <h1 class="text-[1.75rem] lg:text-4xl font-black ">Let’s Discuss Next Project</h1>
+        <p class="my-5 text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication, <br>
+          featuring weathered
+          wood, sleek metal accents.</p>
+
+          <div>
+             <div class="grid lg:grid-cols-2 grid-rows-1 gap-8 ">
+              <input type="text" placeholder="First Name*"   class="outline-none input input-bordered w-full rounded-full text-[#A0A0A0] p-7" />
+              <input type="text" placeholder="Last Name*"    class="outline-none input input-bordered w-full rounded-full text-[#A0A0A0] p-7" />
+              <input type="number" placeholder="Phone Number*" class="outline-none input input-bordered w-full rounded-full text-[#A0A0A0] p-7" />
+              <input type="email" placeholder="Email Address*" class="outline-none input input-bordered w-full rounded-full text-[#A0A0A0] p-7" />
+             </div>
+             <textarea class="textarea w-full h-[240px] outline-none rounded-3xl text-[#A0A0A0] p-7 mt-8" placeholder="Write your message here -"></textarea>
+
+             <button class="btn border-[#ABEF5F] rounded-full py-2 px-5 bg-[#ABEF5F] font-black text-[16px] w-full mt-5">Send Mail
+              <i class="size-6 bg-[black] text-[#ABEF5F] rounded-full w-8 h-8"><svg xmlns="http://www.w3.org/2000/svg"
+                  fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 m-[4px]">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                </svg></i>
+            </button>
+          </div>
+      </div>
+    </section>
+    <!-- Discuss Next Project end -->
+
+
+
 
 
   </main>
