artical sections card update

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         <div class="lg:flex justify-evenly  lg:max-w-[1400px] mx-auto  my-14 space-y-7 lg:space-y-0">
 
           <!-- card 1 -->
-          <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
+          <div class="card bg-base-100 w-[360px] shadow-xl border rounded-xl p-5 text-left mx-auto">
             <figure>
               <img src="assets/article1.png" alt="Shoes" />
             </figure>
@@ -452,7 +452,7 @@
                   <p>By Admin</p>
                 </span>
               </div>
-              <h2 class="card-title font-black text-[22px]">How to choose the furniture right of your home.</h2>
+              <h2 class="card-title font-black text-[18px]">How to choose the furniture right of your home.</h2>
               <p>The barn house captivates with its blend of rustic charm and modern.</p>
 
               <!-- read more button -->
@@ -470,7 +470,7 @@
 
 
           <!-- card 2 -->
-          <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
+          <div class="card bg-base-100 w-[360px] shadow-xl border rounded-xl p-5 text-left mx-auto">
             <figure>
               <img src="assets/article2.png" alt="Shoes" />
             </figure>
@@ -495,7 +495,7 @@
                   <p>By Admin</p>
                 </span>
               </div>
-              <h2 class="card-title font-black text-[22px]">How to choose the furniture right of your home.</h2>
+              <h2 class="card-title font-black text-[18px]">How to choose the furniture right of your home.</h2>
               <p>The barn house captivates with its blend of rustic charm and modern.</p>
 
               <!-- read more button -->
@@ -513,7 +513,7 @@
 
 
           <!-- card 3 -->
-          <div class="card bg-base-100 w-96 shadow-xl border rounded-xl py-5 text-left">
+          <div class="card bg-base-100 w-[360px] shadow-xl border rounded-xl p-5 text-left mx-auto">
             <figure>
               <img src="assets/article3.png" alt="Shoes" />
             </figure>
@@ -538,7 +538,7 @@
                   <p>By Admin</p>
                 </span>
               </div>
-              <h2 class="card-title font-black text-[22px]">How to choose the furniture right of your home.</h2>
+              <h2 class="card-title font-black text-[18px]">How to choose the furniture right of your home.</h2>
               <p>The barn house captivates with its blend of rustic charm and modern.</p>
 
               <!-- read more button -->
