office location section added

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
               wood, sleek metal <br>accents, and large windows that flood the space with natural light.
             </p>
-            <button class="btn border-[#ABEF5F] rounded-full py-2 px-5 bg-[#ABEF5F80] font-black">View Details
+            <button class="btn border-[#ABEF5F] rounded-full py-2 px-5 bg-[#ABEF5F80] font-black w-full lg:w-48">View Details
               <i class="size-6 bg-[#abef5f] text-black rounded-full w-8 h-8"><svg xmlns="http://www.w3.org/2000/svg"
                   fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 m-[4px]">
                   <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
@@ -424,10 +424,10 @@
 
 
         <!-- artical cards -->
-        <div class="lg:flex justify-evenly  lg:max-w-[1400px] mx-auto  my-14 space-y-7 lg:space-y-0">
+        <div class="lg:flex justify-evenly  lg:max-w-[1300px] mx-auto  my-14 space-y-7 lg:space-y-0 lg:space-x-12">
 
           <!-- card 1 -->
-          <div class="card bg-base-100 w-[360px] shadow-xl border rounded-xl p-5 text-left mx-auto">
+          <div class="card bg-base-100  shadow-xl border rounded-xl p-5 text-left mx-auto">
             <figure>
               <img src="assets/article1.png" alt="Shoes" />
             </figure>
@@ -470,7 +470,7 @@
 
 
           <!-- card 2 -->
-          <div class="card bg-base-100 w-[360px] shadow-xl border rounded-xl p-5 text-left mx-auto">
+          <div class="card bg-base-100  shadow-xl border rounded-xl p-5 text-left mx-auto">
             <figure>
               <img src="assets/article2.png" alt="Shoes" />
             </figure>
@@ -513,7 +513,7 @@
 
 
           <!-- card 3 -->
-          <div class="card bg-base-100 w-[360px] shadow-xl border rounded-xl p-5 text-left mx-auto">
+          <div class="card bg-base-100  shadow-xl border rounded-xl p-5 text-left mx-auto">
             <figure>
               <img src="assets/article3.png" alt="Shoes" />
             </figure>
@@ -601,6 +601,64 @@
       </div>
     </section>
     <!-- Discuss Next Project end -->
+
+    <!-- meet US start -->
+     <section class="bg-[#f5f5f5] p-5 lg:pt-12">
+          <div class="">
+
+            <div class="flex gap-3 items-center w-56 px-7 py-2  border rounded-full bg-[#ABEF5F33] m-auto  mb-4">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+              </svg>
+              <h4 class="text-[#494949] font-black">Let's Meet US..</h4>
+            </div>
+    
+            <h1 class="text-center text-[1.75rem] lg:text-4xl font-black ">Let’s meet Our Offices</h1>
+            <p class="text-center my-5 text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication, <br>
+              featuring weathered
+              wood, sleek metal accents.</p>
+
+              <!-- all loactions -->
+              <div class="lg:flex lg:justify-around lg:max-w-[1400px] mx-auto   mt-16 space-y-5 lg:space-y-0">
+                  <!-- 1st country -->
+              <div class="bg-base-100 shadow-xl   border rounded-xl p-10 text-center space-y-2">
+                <img class="w-28 mx-auto" src="assets/flag.png" alt="">
+                <h4 class="text-xl ">Bangladesh</h4>
+                <h1 class="text-2xl font-black">Rinterio Design LTD.</h1>
+                <p>Office Address</p>
+                <h5>169/D North Kunipara, Niketon <br> Dhaka-1200.</h5>
+              </div>
+
+              <!-- 2nd country -->
+              <div class="bg-base-100 shadow-xl   border rounded-xl p-10 text-center space-y-2">
+                <img class="w-28 mx-auto" src="assets/usa flag.png" alt="">
+                <h4 class="text-xl ">USA</h4>
+                <h1 class="text-2xl font-black">Rinterio Design LTD.</h1>
+                <p>Office Address</p>
+                <h5>169/D North Kunipara, Niketon <br> Dhaka-1200.</h5>
+              </div>
+
+
+              <!-- 3rd country -->
+              <div class="bg-base-100 shadow-xl   border rounded-xl p-10 text-center space-y-2">
+                <img class="w-28 mx-auto" src="assets/uae flag.png" alt="">
+                <h4 class="text-xl ">UAE</h4>
+                <h1 class="text-2xl font-black">Rinterio Design LTD.</h1>
+                <p>Office Address</p>
+                <h5>169/D North Kunipara, Niketon <br> Dhaka-1200.</h5>
+              </div>
+              </div>
+
+
+            <!-- location -->
+              <div class="bg-base-100 shadow-xl border rounded-xl p-12 mt-14 lg:w-5/6 mx-auto">
+                <span ><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d418.5305632905204!2d90.40481547430409!3d23.772798433865436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c77aecceb3d7%3A0xca2a73dd5050284c!2sRahman%20Kindergarten!5e0!3m2!1sen!2sbd!4v1724585314779!5m2!1sen!2sbd" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></span>
+              </div>
+
+          </div>
+     </section>
+    <!-- meet US end -->
 
 
 
