add correction in form section

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
           </svg>
-          <h4 class="text-[#494949] font-black">Let's Contact</h4>
+          <h4 class="text-[#494949] font-black">Let's Connect</h4>
         </div>
 
         <h1 class="text-[1.75rem] lg:text-4xl font-black ">Let’s Discuss Next Project</h1>
